kcontainer/refarch-kc-ui/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc-ui
  labels:
    app: kc-ui
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: kc-ui
  template:
    metadata:
      labels:
        app: kc-ui
    spec:
      serviceAccountName: default
      containers:
      - name: "kc-ui"
        image: "eventingapps/kcontainer-ui"
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3010
          initialDelaySeconds: 3000
          periodSeconds: 1000
        ports:
        - containerPort: 3010
        resources:
          requests:
            cpu: "200m"
            memory: "300Mi"
