kcontainer/refarch-kc-ui/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  name: "kc-ui-service"
spec:
  selector:
    app: kc-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
